--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="/">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="main.css">
 
     <!-- Polyfill(s) for older browsers -->
     <script src="lib/core-js/client/shim.min.js"></script>
@@ -15,7 +15,7 @@
 
     <script src="systemjs.config.js"></script>
     <script>
-      System.import('main.js').catch(function(err){ console.error(err); });
+      System.import('app').catch(function(err){ console.error(err); });
     </script>
   </head>
 
