Added some styling dependencies.

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="/">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="lib/purecss/build/pure-min.css">
+    <link rel="stylesheet" href="lib/purecss/build/grids-responsive-min.css">
+    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway:200">
 
     <!-- Polyfill(s) for older browsers -->
     <script src="lib/core-js/client/shim.min.js"></script>
-
     <script src="lib/zone.js/dist/zone.js"></script>
     <script src="lib/systemjs/dist/system.src.js"></script>
 
@@ -20,6 +23,6 @@
   </head>
 
   <body>
-    <my-app>Loading AppComponent content here ...</my-app>
+    <kinklist>kinklist loading ...</kinklist>
   </body>
 </html>
